rnsc/test_data/rns_integration/error/lexer/quoted_identifiers/basic_unterminated_string.rns
.class public Test
"String with no ending quote
.class_end